# parallel-you

./: .gitignore  ARCHITECTURE.md  LICENSE.md  Makefile  ParallelYou.sln  README.md  ROADMAP.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  threads.yaml
ParallelYou.ThreadService/: Envelope.cs  ParallelYou.ThreadService.csproj  Program.cs  ThreadCommandWorker.cs
notes/: weave-consolidation-protocol-context.md
src/: app.py  util.py
src/ParallelYou/: ParallelYou.sln
src/ParallelYou/ParallelYou.App/: ParallelYou.App.csproj  ParallelYouTui.cs  Program.cs
src/ParallelYou/ParallelYou.Bus/: MessageBroker.cs  ParallelYou.Bus.csproj
src/ParallelYou/ParallelYou.Bus.Abstractions/: IBroker.cs  ITransport.cs  ParallelYou.Bus.Abstractions.csproj
src/ParallelYou/ParallelYou.Model/: ParallelYou.Model.csproj
src/ParallelYou/ParallelYou.Repo/: ParallelYou.Repo.csproj
src/ParallelYou/ParallelYou.Repo.Abstractions/: IRepo.cs
src/ParallelYou/ParallelYou.Tests/: BusTests.cs  ParallelYou.Tests.csproj  RepoTests.cs  TestBootstrap.cs  TestMatrix.cs
src/ParallelYou/ParallelYou.Util/: DictionaryExtensions.cs
src/dotnet/ParallelYou/: ParallelYou.sln
src/parallel-you-api/: requirements-dev.txt  requirements.txt
src/parallel-you-api/parallel_you_api/: app.py  discovery.py  lifespan.py  rabbit.py  websocket_hub.py
src/parallel_you/bus/: __init__.py  broker_factory.py  message_broker.py
src/parallel_you/messages/: __init__.py
src/python/: filter_spec.py
src/valkyr_threads/: __init__.py  app.css  app.py  cli.py  edit_screen.py  model.py  prompt.py  scheduler.py  sort_filter.py  storage.py
tests/: conftest.py  test_bus_broker.py  test_bus_memory_transport.py  test_bus_message.py  test_repo.py
tests/python/: conftest.py  test_bus_broker.py  test_bus_transport.py
(+96 files in other folders)
