[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "parallel-you"
version = "0.3.1"
description = "YAML-backed personal thread scheduler with a Textual TUI"
authors = [{ name = "Valkyr" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60.0",
    "pyyaml>=6.0.2",
    "typer>=0.12.5",
    "rich>=13.7.1",
    "pymongo==4.15.3",
    "reactive==0.1",
    "typer==0.20.0"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
